ingress/demos/demoapp/bluegreendeployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: default
spec:
  ports:
    - port: 8080
  selector:
    appname: demo
    appversion: "0.1"
