ingress/demos/demoapp/bluegreendeployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-app
  namespace: default
spec:
  rules:
  - host: hello.demo.olly.dtcntr.net
    http:
      paths:
      - backend:
          serviceName: demo-app
          servicePort: 8080
